Committing the 3rd version of code with Global Error handler for handling exceptions and all the negative scenarios and postman collections.